--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@ proguard/
 
 # Android Studio captures folder
 captures/
+
+# Android Studio
+*.iml
+.idea
+#.idea/workspace.xml - remove # and delete .idea if it better suit your needs.
+.gradle
+build/
+**/output.json
+app/google-services\.json
