--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
 
     // DI
-    implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
+    implementation 'org.koin:koin-android-viewmodel:2.0.0-GA4'
 
     // Testing
     testImplementation 'junit:junit:4.12'
